# src/domain/models/addAllowedEmailRequest.ts
@@ -1,0 +1,18 @@
+/**
+ * API de finanças M&J
+ * API de controle financeiro do Júnior e da Vivi
+ *
+ * The version of the OpenAPI document: 1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+export interface AddAllowedEmailRequest {
+  /**
+   * Email a ser adicionado à lista de permitidos
+   */
+  email: string;
+}
